--- a/public/index.html
+++ b/public/index.html
@@ -3,19 +3,41 @@
   <head>
     <title>kmaida.io</title>
     <link
-      rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <div class="container">
       <h1 class="text-center">kmaida.io</h1>
+      <p class="lead text-center">Hello! My name is <strong>Kim Maida</strong>.</p>
+      <p>
+        I wear many hats:
+      </p>
+      <ul>
+        <li>Angular Google Developer Expert</li>
+        <li>Angular Consultant</li>
+        <li>Technical Content Lead / Developer Marketing</li>
+        <li>Speaker &amp; Mentor</li>
+        <li>Passionate about and always advocating for Diversity &amp; Inclusion</li>
+      </ul>
+      <p>
+        I can be found at:
+      </p>
       <ul>
         <li>
-          <strong>GitHub:</strong> <a href="https://github.com/kmaida">kmaida @ GitHub</a>
+          <strong>GDE:</strong> <a href="https://developers.google.com/experts/people/kim-maida">GDE: Kim Maida</a>
         </li>
         <li>
-            <strong>Twitter:</strong> <a href="https://twitter.com/KimMaida">@KimMaida</a>
+          <strong>GitHub:</strong> <a href="https://github.com/kmaida">kmaida</a>
+        </li>
+        <li>
+          <strong>Twitter:</strong> <a href="https://twitter.com/KimMaida">@KimMaida</a>
+        </li>
+        <li>
+          <strong>Email:</strong> <a href="mailto:kim@kmaida.io">kim@kmaida.io</a>
         </li>
       </ul>
     </div>
