--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       </p>
       <ul>
         <li>
-          <strong>GDE:</strong> <a href="https://developers.google.com/experts/people/kim-maida">GDE: Kim Maida</a>
+          <strong>GDE:</strong> <a href="https://developers.google.com/experts/people/kim-maida">Kim Maida</a>
         </li>
         <li>
           <strong>GitHub:</strong> <a href="https://github.com/kmaida">kmaida</a>
