Update with events and position

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,8 @@
       <ul>
         <li>Angular Google Developer Expert</li>
         <li>Angular Consultant</li>
-        <li>Technical Content Lead / Developer Marketing</li>
+        <li>Community &amp; Technical Content Leadership</li>
+        <li>Developer Marketing</li>
         <li>Speaker &amp; Mentor</li>
         <li>Passionate about and always advocating for Diversity &amp; Inclusion</li>
       </ul>
@@ -38,6 +39,38 @@
         </li>
         <li>
           <strong>Email:</strong> <a href="mailto:kim@kmaida.io">kim@kmaida.io</a>
+        </li>
+        <li>
+          <strong>Meetup Organizer:</strong> <a href="https://www.meetup.com/Angular-Ann-Arbor/">Angular Ann Arbor</a>
+        </li>
+      </ul>
+
+      <p class="lead text-center">
+        2019 events (current, upcoming, and additional TBD):
+      </p>
+      <ul>
+        <li>
+          NgAtlanta (Atlanta, GA - January 9-12): <em>workshop, event MC</em>
+        </li>
+        <li>
+          An Evening of Angular (Denver, CO - January 17): <em>speaker</em>
+        </li>
+      </ul>
+      <p class="lead text-center">
+        2018 events (past):
+      </p>
+      <ul>
+        <li>
+          NgAtlanta (Atlanta, GA - January): <em>multiple workshops, speaker</em>
+        </li>
+        <li>
+          ng-conf (Salt Lake City, UT - April): <em>NgGirls workshop</em>
+        </li>
+        <li>
+          AngularUP (Tel Aviv, Israel - June): <em>speaker</em>
+        </li>
+        <li>
+          AngularMix (Orlando, FL - October): <em>speaker</em>
         </li>
       </ul>
     </div>
