Update events list

--- a/public/index.html
+++ b/public/index.html
@@ -46,14 +46,17 @@
       </ul>
 
       <p class="lead text-center">
-        2019 events (current, upcoming, and additional TBD):
+        2019 events (additional TBD):
       </p>
       <ul>
         <li>
-          NgAtlanta (Atlanta, GA - January 9-12): <em>workshop, event MC</em>
+          NgAtlanta (Atlanta, GA - January 9-12): <em>workshop, conference Master of Ceremonies</em>
         </li>
         <li>
           An Evening of Angular (Denver, CO - January 17): <em>speaker</em>
+        </li>
+        <li>
+          ng-conf (Salt Lake City, UT - May 1-3): <em>speaker</em>
         </li>
       </ul>
       <p class="lead text-center">
