--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype HTML>
 <html>
   <head>
-    <title>kmaida.io</title>
+    <title>Kim Maida</title>
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
@@ -11,25 +11,32 @@
 
   <body>
     <div class="container">
-      <h1 class="text-center">kmaida.io</h1>
-      <p class="lead text-center">Hello! My name is <strong>Kim Maida</strong>.</p>
+      <h1 class="text-center">Kim Maida</h1>
       <p>
-        I wear many hats:
+        I am:
       </p>
       <ul>
-        <li>Angular Google Developer Expert</li>
-        <li>Angular Consultant</li>
-        <li>Community &amp; Technical Content Leadership</li>
-        <li>Developer Marketing</li>
-        <li>Speaker &amp; Mentor</li>
-        <li>Passionate about and always advocating for Diversity &amp; Inclusion</li>
+        <li><a href="https://auth0.com">Auth0</a> Manager of <a href="https://community.auth0.com">Community</a> and <a href="https://auth0.com/blog/tech/">Technical Content</a></li>
+        <li>Full-stack JavaScript Engineer</li>
+        <li>Technical Writer</li>
+        <li>(Former) Zoologist: <a href="https://link.springer.com/article/10.1007/s00265-010-1047-4">Animal Behavior</a> &amp; Neurobiology</li>
       </ul>
       <p>
-        I can be found at:
+        I do:
+      </p>
+      <ul>
+        <li><a href="https://github.com/kmaida/about#events">International speaking</a></li>
+        <li>Tech community organizing</li>
+        <li>Mentoring</li>
+        <li>Teaching (authentication / authorization workshops)</li>
+        <li>Consulting (Identity &amp; Access Management, Angular architecture)</li>
+      </ul>
+      <p>
+        I can be found:
       </p>
       <ul>
         <li>
-          <strong>GDE:</strong> <a href="https://developers.google.com/experts/people/kim-maida">Kim Maida</a>
+          <strong>Google Developer Expert:</strong> <a href="https://developers.google.com/experts/people/kim-maida">Kim Maida</a>
         </li>
         <li>
           <strong>GitHub:</strong> <a href="https://github.com/kmaida">kmaida</a>
@@ -46,36 +53,8 @@
       </ul>
 
       <p class="lead text-center">
-        2019 events (additional TBD):
+        To find out where and when I'll be speaking, please see <a href="https://github.com/kmaida/about#events">this list of events</a>.
       </p>
-      <ul>
-        <li>
-          NgAtlanta (Atlanta, GA - January 9-12): <em>workshop, conference Master of Ceremonies</em>
-        </li>
-        <li>
-          An Evening of Angular (Denver, CO - January 17): <em>speaker</em>
-        </li>
-        <li>
-          ng-conf (Salt Lake City, UT - May 1-3): <em>speaker</em>
-        </li>
-      </ul>
-      <p class="lead text-center">
-        2018 events (past):
-      </p>
-      <ul>
-        <li>
-          NgAtlanta (Atlanta, GA - January): <em>multiple workshops, speaker</em>
-        </li>
-        <li>
-          ng-conf (Salt Lake City, UT - April): <em>NgGirls workshop</em>
-        </li>
-        <li>
-          AngularUP (Tel Aviv, Israel - June): <em>speaker</em>
-        </li>
-        <li>
-          AngularMix (Orlando, FL - October): <em>speaker</em>
-        </li>
-      </ul>
     </div>
   </body>
 </html>
