--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         I am:
       </p>
       <ul>
-        <li><a href="https://auth0.com">Auth0</a> Manager of <a href="https://community.auth0.com">Community</a> and <a href="https://auth0.com/blog/tech/">Technical Content</a></li>
+        <li><a href="https://auth0.com">Auth0</a> Manager of <a href="https://community.auth0.com">Community</a> and <a href="https://auth0.com/blog/developers/">Technical Content</a></li>
         <li>Full-stack JavaScript Engineer</li>
         <li>Technical Writer</li>
         <li>(Former) Zoologist: <a href="https://link.springer.com/article/10.1007/s00265-010-1047-4">Animal Behavior</a> &amp; Neurobiology</li>
@@ -30,6 +30,7 @@
         <li>Mentoring</li>
         <li>Teaching (authentication / authorization workshops)</li>
         <li>Consulting (Identity &amp; Access Management, Angular architecture)</li>
+        <li><a href="https://www.meetup.com/Angular-Ann-Arbor/">Meetup organization</a></li>
       </ul>
       <p>
         I can be found:
@@ -39,6 +40,9 @@
           <strong>Google Developer Expert:</strong> <a href="https://developers.google.com/experts/people/kim-maida">Kim Maida</a>
         </li>
         <li>
+          <strong>Auth0 Blog:</strong> <a href="https://auth0.com/blog/authors/Kim-Maida/">Kim Maida</a>
+        </li>
+        <li>
           <strong>GitHub:</strong> <a href="https://github.com/kmaida">kmaida</a>
         </li>
         <li>
@@ -46,9 +50,6 @@
         </li>
         <li>
           <strong>Email:</strong> <a href="mailto:kim@kmaida.io">kim@kmaida.io</a>
-        </li>
-        <li>
-          <strong>Meetup Organizer:</strong> <a href="https://www.meetup.com/Angular-Ann-Arbor/">Angular Ann Arbor</a>
         </li>
       </ul>
 
